--- a/home/techguides/deploy-an-update-to-an-existing-environment.html
+++ b/home/techguides/deploy-an-update-to-an-existing-environment.html
@@ -164,7 +164,11 @@
 <tbody>
 <tr>
 <td>client_files\localjars</td>
-<td>This folder is designed for local JARs (not released by T24 Core) installation.<br>Any JAR file used by T24 or other parties can be uploaded in this folder. During deployment, all JARs present in this folder will be deployed in the environment. If a JAR file is corrupted or some dependencies are missing, the environment will not start.</td>
+<td>This folder is designed for local JARs (not released by T24 Core) installation.<br>Any JAR file used by T24 or other parties can be uploaded in this folder. During deployment, all JARs present in this folder will be deployed in the environment. If a JAR file is corrupted or some dependencies are missing, the environment will not start. A module.xml file is regenerated based on all the JAR files.</td>
+</tr>
+<tr>
+<td></td>
+<td></td>
 </tr>
 <tr>
 <td>client_files\localjars\ext</td>
