--- a/docfx_project/site/home/toc.html
+++ b/docfx_project/site/home/toc.html
@@ -114,6 +114,9 @@
                           <a href="techguides/export-import-database.html" name="" title="Export and Import a Database">Export and Import a Database</a>
                         </li>
                         <li>
+                          <a href="techguides/https-in-front-of-sftp.html" name="" title="How to access the SFTP using HTTPs">How to access the SFTP using HTTPs</a>
+                        </li>
+                        <li>
                           <a href="techguides/access-t24-ud-directories.html" name="" title="Access T24 UD Directories">Access T24 UD Directories</a>
                         </li>
                         <li>
@@ -185,9 +188,6 @@
                   </li>
                   <li>
                     <a href="techguides/automated-factories.html" name="" title="Manage Automated Factories">Manage Automated Factories</a>
-                  </li>
-                  <li>
-                    <a href="techguides/manage-test-scripts.html" name="" title="Manage Test Scripts">Manage Test Scripts</a>
                   </li>
                   <li>
                     <a href="techguides/run-factory.html" name="" title="Run a Factory with &quot;Run Now&quot; Button and Dashboard">Run a Factory with &quot;Run Now&quot; Button and Dashboard</a>
