--- a/docfx_project/site/home/techguides/user-creation-in-paas.html
+++ b/docfx_project/site/home/techguides/user-creation-in-paas.html
@@ -135,6 +135,14 @@ responsibility to inform the new user about its credentials and set of permissio
 <li>choose from the drop-down list the role that needs to be assigned </li>
 </ul>
 <p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click <strong><a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a></strong> to get an overview of the permissions.</p>
+<p>For security purposes, if you are inactive for more than 5 minutes on the Temenos Continuous Deployment Platform a dialog box pop up prompts on the screen in the last minute of your inactive session which asks to choose whether you want to extend the session or logout.</p>
+<p><img src="images/idler-session-timeout.png" alt=""></p>
+<ul>
+<li><p>By clicking <strong>Extend</strong> your session will still be active</p>
+</li>
+<li><p>If you opt to <strong>Logout</strong> or don’t take any action on the pop-up your session will expire. Note that the environment creation, factory runs or other organization operations will still be running. </p>
+</li>
+</ul>
 <h1 id="how-to-use-putty-ssh-client-for-ssh-key-generation">How to use PuTTY SSH client for SSH key generation.</h1>
 <p>Should the users requires access to the source code repository they need to provide their public SSH Keys on the user profile section to gain access.</p>
 <ul>
