--- a/home/techguides/components-products.html
+++ b/home/techguides/components-products.html
@@ -299,8 +299,16 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 <p><br>
 </br></p>
 <h1 id="artifactory-view">Artifactory view</h1>
-<p>The artifactory view displays the uploaded components that are available for the particular stages. By expanding the components, the user triggers a download of the respective component zip file.</p>
-<p><img src="images/artifactory_view.png" alt=""></p>
+<p>The artifactory view displays the uploaded components that are available for the particular stages. 
+<img src="images/artifactory_view.png" alt=""></p>
+<ul>
+<li><p>Click on the <img src="images/i-icon.png" alt=""> icon to go to the artifactory page. You will be asked to insert the login details of the Artifactory:
+<img src="images/platform-artifactory-login.png" alt=""></p>
+</li>
+<li><p>Click on the <img src="images/arrow-icon.png" alt=""> to expand the Component details. By clicking on the component.zip you can download the file to your local machine.
+<img src="images/download-component.png" alt=""></p>
+</li>
+</ul>
 <p><br>
 </br></p>
 <h1 id="user-permissions-required">User Permissions Required</h1>
