--- a/home/techguides/export-import-database.html
+++ b/home/techguides/export-import-database.html
@@ -85,7 +85,7 @@
 <p>Login to your organization on the TCD (Temenos Continuous Deployment) portal (<a href="https://portal.temenos.cloud/">portal.temenos.cloud</a>) read and accept the privacy notice.</p>
 <p><img src="images/db-login.png" width="450" height="200"></p>
 <h2 id="create-an-environment">Create an Environment</h2>
-<p>To see how to create an environment, please also check <a href="environment-creation-in-paas.html" target="_blank"><strong>this</strong></a> user guide.</p>
+<p>To see how to create an environment, please also check <a href="./environment-creation-in-paas.md" target="_blank"><strong>this</strong></a> user guide.</p>
 <div class="NOTE"><h5>Note</h5><p>For this user guide, there are two environments created: </p>
 <ul>
 <li>DevEnv</li>
