--- a/home/manage-environments.html
+++ b/home/manage-environments.html
@@ -108,7 +108,7 @@
 <li>Click <strong>Create environment</strong>
 All fields are mandatory except &#39;Labels&#39;</li>
 </ul>
-<p><img src="images/env-new.png" alt=""></p>
+<p><img src="./images/env-new.png" alt=""></p>
 <p><br></p>
 <p> To see the details of an environment you need to select it from the environments list. This window allows you to also filter the Extend environments or those resulted following a manual/ automated factory:
 <img src="images/env-list.png" alt=""></p>
@@ -133,7 +133,7 @@ All fields are mandatory except &#39;Labels&#39;</li>
 <li><p>The <strong>Release Notes</strong></p>
 </li>
 <li><p>The <strong>Components List</strong> - these can be filtered as the user wants</p>
-<p><img src="images/template-components-list.png" alt=""></p>
+<p><img src="./images/template-components-list.png" alt=""></p>
 </li>
 <li><p>The <strong>Template Content</strong></p>
 <p><img src="images/templates-content.png" alt=""></p>
