--- a/home/user-creation-in-paas.html
+++ b/home/user-creation-in-paas.html
@@ -103,7 +103,7 @@
 <li><p>Click <strong>Create</strong></p>
 </li>
 </ol>
-<p><img src="images/create-user.png" alt=""></p>
+<p><img src="./images/create-user.png" alt=""></p>
 <p>This will create a new user in your organisation. This new user will be automatically assigned to all GitLab Repositories from within all environments. If you have already a user created, you can click on the user and update the SSH key box with the one created above.</p>
 <blockquote><p><strong>Important!</strong>: It is the Organisation Admin&#39;s 
 responsibility to inform the new user about its credentials and set of permissions granted on the portal.</p>
@@ -179,7 +179,7 @@ responsibility to inform the new user about its credentials and set of permissio
 <li><p>The administrator can create more users and navigate to the Roles section on the portal to assign various permissions to each user. To create a role, click on <strong>New Role</strong> on top-right and fill in the blanks:</p>
 </li>
 </ol>
-<p><img src="images/create-user-role.png" alt=""></p>
+<p><img src="./images/create-user-role.png" alt=""></p>
 <p>The admin can select which permissions to set to each user.
 <img src="images/create-user-role-permissions.png" alt="user"></p>
 <p>Once the role is created, the admin can assign it to a specific user:</p>
