--- a/home/techguides/selenium-template.html
+++ b/home/techguides/selenium-template.html
@@ -334,7 +334,7 @@
 <ul>
 <li><p>Click  <strong><a href="../zip/test-framework.zip">HERE</a></strong>  to download the sources of the sample selenium-junit test framework, which is based on selenium and Junit and produces the test results in an xml format specified by junit.  This is a java project which can be imported into an IDE for further enhancements.</p>
 </li>
-<li><p>Also click <strong><a href="../zip/TestCase.zip">HERE</a></strong> to download the TestCase.zip with the structure mentioned above that includes Lib folder that contains all the dependencies to run the TestCase, a global properties file and a CommandsToExecute.txt file.</p>
+<li><p>Also click <strong><a href="./../zip/TestCase.zip">HERE</a></strong> to download the TestCase.zip with the structure mentioned above that includes Lib folder that contains all the dependencies to run the TestCase, a global properties file and a CommandsToExecute.txt file.</p>
 </li>
 <li><p>Source for the Sample TestCase Java Project can be found <strong><a href="../zip/sample-test.zip">HERE</a></strong>.  The test cases in this project can be adapted and can be used as part of the factory run.</p>
 </li>
