--- a/home/techguides/selenium-template.html
+++ b/home/techguides/selenium-template.html
@@ -328,13 +328,15 @@
 <p><img src="images/selenium-dashboard-example.png" alt=""></p>
 <p>The Temenos Continuous Deployment Platform will move these consolidated results to a centralized storage account and provide a download facility from the dashboard for each test suite.</p>
 <p><img src="images/selenium-consolidated-results.png" alt=""></p>
+<p>Below you can see how the Automation Test Results (summary and packages)</p>
+<p><img src="images/selenium-automation-test-results.png" alt=""></p>
 <p><br>
 </br></p>
 <h1 id="attachments">Attachments</h1>
 <ul>
 <li><p>Click  <strong><a href="../zip/test-framework.zip">HERE</a></strong>  to download the sources of the sample selenium-junit test framework, which is based on selenium and Junit and produces the test results in an xml format specified by junit.  This is a java project which can be imported into an IDE for further enhancements.</p>
 </li>
-<li><p>Also click <strong><a href="./../zip/TestCase.zip">HERE</a></strong> to download the TestCase.zip with the structure mentioned above that includes Lib folder that contains all the dependencies to run the TestCase, a global properties file and a CommandsToExecute.txt file.</p>
+<li><p>Also click <strong><a href="../zip/TestSuite.zip">HERE</a></strong> to download the TestCase.zip with the structure mentioned above that includes the Lib folder containing all the dependencies to run the TestCase, a global properties file and a CommandsToExecute.txt file.</p>
 </li>
 <li><p>Source for the Sample TestCase Java Project can be found <strong><a href="../zip/sample-test.zip">HERE</a></strong>.  The test cases in this project can be adapted and can be used as part of the factory run.</p>
 </li>
