--- a/home/techguides/deploy-an-update-to-an-existing-environment.html
+++ b/home/techguides/deploy-an-update-to-an-existing-environment.html
@@ -115,39 +115,47 @@
 <tbody>
 <tr>
 <td>addons</td>
-<td>This folder is   designed for AppDynamics. Upload files as JAR.</td>
+<td>This   folder is designed for AppDynamics. Upload files as JAR.</td>
 </tr>
 <tr>
 <td>client_files\h2db</td>
-<td>Local H2 database   that will be uploaded to the Cloud Environment. Database username must be t24   and password t24 (case sensitive). Database name is mandatory to be   “TAFJDB.h2.db” (case sensitive) and must be archived as a ZIP with name   TAFJDB.zip (case sensitive). If the above conditions are not satisfied, the   database will not be uploaded to the Cloud Environment. This procedure will   replace the existing database in the cloud with this one. The old database   will be lost, including any records loaded manually.</td>
+<td>Local   H2 database that will be uploaded to the Cloud Environment. Database username   must be t24 and password t24 (case sensitive). Database name is mandatory to   be “TAFJDB.h2.db” (case sensitive) and must be archived as a ZIP with name   TAFJDB.zip (case sensitive). If the above conditions are not satisfied, the   database will not be uploaded to the Cloud Environment. This procedure will   replace the existing database in the cloud with this one. The old database   will be lost, including any records loaded manually.</td>
 </tr>
 <tr>
 <td>client_files\helptext</td>
-<td>Custom Help Text   files can be uploaded in this folder. The file structure must be the same as   HELP.TEXT T24 core. Thus, under client_files\helptext folder, the HelpText   folder with subfolders for each component (AA, EB, PP, etc.) is expected.</td>
+<td>Custom   Help Text files can be uploaded in this folder. The file structure must be   the same as HELP.TEXT T24 core. Thus, under client_files\helptext folder, the   HelpText folder with subfolders for each component (AA, EB, PP, etc.) is   expected.</td>
 </tr>
 <tr>
 <td>packages</td>
-<td>If you intend to   upload one or more Design Studio packages, add it here as a .jar file. Note that the Temenos Continuous Deployment platform does not support the old .d format for Design Studio packages and only support the current ESON or version/enquiry records.</td>
+<td>If   you intend to upload one or more Design Studio packages, add it here as a   .jar file. Note that the Temenos Continuous Deployment platform does not   support the old .d format for Design Studio packages and only support the   current ESON or version/enquiry records.</td>
 </tr>
 <tr>
 <td>packages\l3</td>
-<td>One or more Design   Studio packages can be bundled in a .zip file format and uploaded in this   folder. Note that the Temenos Continuous Deployment platform does not support the old .d format for Design Studio packages and only support the current ESON or version/enquiry records.</td>
+<td>One   or more Design Studio packages can be bundled in a .zip file format and   uploaded in this folder. Note that the Temenos Continuous Deployment platform   does not support the old .d format for Design Studio packages and only   support the current ESON or version/enquiry records.</td>
 </tr>
 <tr>
 <td>plugins</td>
-<td>WAR files can be   uploaded in this folder. The files will be deployed inside Jboss EAP. In   addition to this, endpoints related to plugins can be automatically added to   an application. For more details, check this guide.</td>
+<td>WAR   files can be uploaded in this folder. The files will be deployed inside Jboss   EAP. In addition to this, endpoints related to plugins can be automatically   added to an application. For more details, check this guide.</td>
 </tr>
 <tr>
 <td>updates</td>
-<td>The updates files   downloaded from the portal in .zip of .zip format. The files will be copied   to the update folder and the T24 Update procedure is triggered.</td>
+<td>The   updates files downloaded from the portal in .zip of .zip format. The files   will be copied to the update folder and the T24 Update procedure is   triggered.</td>
 </tr>
 <tr>
 <td>wsdl</td>
-<td>WSDL files and   folders that are required by plug-ins (war file) need to be uploaded here.</td>
+<td>WSDL   files and folders that are required by plug-ins (war file) need to be   uploaded here.</td>
 </tr>
 <tr>
 <td>client_files\sqldb</td>
-<td>The SQL database will be   uploaded to the client_files\sqldb folder. The file extensions of the   database must be .bak, .zip or both (i.e. in case of more .bak files need to be uploaded, you can add them under a .zip which would also reduce the size   during Git deploy). Note: the .zip or .bak file can have any name. Nonetheless, the database name within the SQL database backup file must be UTPSQLDB. If the database name is other than UTPSQLDB, the database deployment will not work. The database credentials, schema  security group access, logical/physical file names, etc, should be followed as in UTP SQL model bank database. By default, the Recovery model parameter is ‘FULL’, incase of a larger database/more transactions involved, then it is preferred to set the parameter as ‘SIMPLE’. This parameter will be retained after DB import/cloned to a new environment. In case you need to convert the database from H2 to SQL DB, please raise a PACS ticket.</td>
+<td>The   SQL database will be uploaded to the client_files\sqldb folder. The file   extensions of the database must be .bak, .zip or both (i.e. in case of more   .bak files need to be uploaded, you can add them under a .zip which would   also reduce the size during Git deploy). Note: the .zip or .bak file can have   any name. Nonetheless, the database name within the SQL database backup file   must be UTPSQLDB. If the database name is other than UTPSQLDB, the database   deployment will not work. The database credentials, schema security group   access, logical/physical file names, etc, should be followed as in UTP SQL   model bank database. By default, the Recovery model parameter is ‘FULL’,   incase of a larger database/more transactions involved, then it is preferred   to set the parameter as ‘SIMPLE’. This parameter will be retained after DB   import/cloned to a new environment. In case you need to convert the database   from H2 to SQL DB, please raise a PACS ticket.</td>
+</tr>
+<tr>
+<td>l3-pre-dsf-packages</td>
+<td>To make changes to T24 records we use l3-pre-dsf and   l3-post-dsf packages. The priority and order of deployment can be specified   in pre and post packages. Go to the How to deploy the DSF packages   instructions to learn more.</td>
+</tr>
+<tr>
+<td>l3-post-dsf-packages</td>
+<td>Same functionality as above.</td>
 </tr>
 </tbody>
 </table>
@@ -312,6 +320,52 @@
 </ul>
 <p><br>
 </br></p>
+<h1 id="how-to-deploy-the-dsf-packages">How to deploy the DSF packages</h1>
+<p>To deploy DSF packages, the following components must be present in  Extend/ Assemble environments:</p>
+<ol>
+<li><p>DSF Packager artefacts available in the T24 Environment. It is assumed that the UXP license file includes the license for the domain *.temenos.cloud. Reach out to Temenos license team to confirm the same.  </p>
+<p>dsf-iris.war</p>
+<p>dsf-uxp.war</p>
+</li>
+<li><p>IRF Catalog service in T24 environment:</p>
+<p>irf-t24catalog-services.war</p>
+</li>
+<li><p>IRIS Catalog service in T24 environment:</p>
+<p>t24-eb-catalog-service-ejb.jar
+<br></p>
+<h3 id="dsf-package-structure">DSF Package Structure</h3>
+<p>The l3-pre-dsf-packages and/or l3-post-dsf-packages containing DSF packages have the <strong>format of zip of zip</strong>. See below a  sample package:</p>
+<p><img src="images/dsf-package-structure.png" alt="">
+<br></p>
+<h3 id="dsf-deployment-overview">DSF Deployment Overview</h3>
+<p>See below what happens in the environment when a DSF packacke is deployed:</p>
+</li>
+</ol>
+<ul>
+<li><p>The zip of zip file is downloaded into a temporary file within the TCD environment</p>
+</li>
+<li><p>A curl command is executed to deploy the package file in the zip format. See the example below:</p>
+<p><code>curl -X POST -L -F &quot;package=@MyTestPack-1.0.0.zip;type=application/zip&quot; http://&lt;dnsname&gt;/dsf-iris/api/v1.0.0/meta/dsfpackages/deploy)</code></p>
+</li>
+<li><p>The output of the curl command is displayed in the events log</p>
+</li>
+<li><p>See below a sample output of a successful deployment (this is available in your <strong>Events</strong> tab on your environment page):</p>
+<p>   <img src="images/dsf-package-success-sample.png" alt=""></p>
+</li>
+<li><p>See below a sample output of a failed deployment (this is available in your <strong>Events</strong> tab on your environment page):</p>
+<p>   <img src="images/dsf-package-error-sample.png" alt=""></p>
+<h3 id="dsf-deployment-notes">DSF Deployment Notes</h3>
+</li>
+<li><p>For the factory run, the components mentioned in 1, 2 and 3 from the <strong>How to deploy the DSF packages</strong> should be defined in the factory</p>
+</li>
+<li><p>In an Extend environment, there will be two new folders named <strong>pre-dsf-packages</strong> and <strong>post-dsf-packages</strong></p>
+<p>   <img src="images/dsf-pre-post-packages.png" alt=""></p>
+</li>
+<li><p>In case you only have one set of DSF package to be installed into a Temenos Continuous Deployment Extend environment, please include the package in** pre-dsf-packages** folder in the GIT</p>
+</li>
+<li><p>We currently support a single file inside the pre-dsf / post-dsf folders. Bundle all your DSF Packages into a .zip file before uploading them. </p>
+</li>
+</ul>
 <h1 id="user-permissions-required">User Permissions Required</h1>
 <p>To be able to perform the above operations the below permissions need to be enabled for your user:</p>
 <ul>
