--- a/home/techguides/deploy-an-update-to-an-existing-environment.html
+++ b/home/techguides/deploy-an-update-to-an-existing-environment.html
@@ -151,7 +151,7 @@
 </tr>
 <tr>
 <td>l3-pre-dsf-packages</td>
-<td>To make changes to T24 records we use l3-pre-dsf and   l3-post-dsf packages. The priority and order of deployment can be specified   in pre and post packages. Go to the How to deploy the DSF packages   instructions to learn more.</td>
+<td>To make changes to T24 records we use l3-pre-dsf and   l3-post-dsf packages. The priority and order of deployment can be specified   in pre and post packages. Go to the <a href="http://documentation.temenos.cloud/home/techguides/deploy-an-update-to-an-existing-environment.html#how-to-deploy-the-dsf-packages">How to deploy the DSF packages </a>  instructions to learn more.</td>
 </tr>
 <tr>
 <td>l3-post-dsf-packages</td>
