--- a/home/techguides/deploy-an-update-to-an-existing-environment.html
+++ b/home/techguides/deploy-an-update-to-an-existing-environment.html
@@ -356,12 +356,12 @@
 <p>   <img src="images/dsf-package-error-sample.png" alt=""></p>
 <h3 id="dsf-deployment-notes">DSF Deployment Notes</h3>
 </li>
-<li><p>For the factory run, the components mentioned in 1, 2 and 3 from the <strong>How to deploy the DSF packages</strong> should be defined in the factory</p>
+<li><p>For the factory run, the components mentioned in 1, 2 and 3 from the <strong>How to deploy the DSF packages</strong> should be defined in the factory.</p>
 </li>
-<li><p>In an Extend environment, there will be two new folders named <strong>pre-dsf-packages</strong> and <strong>post-dsf-packages</strong></p>
+<li><p>In an Extend environment, there will be two new folders named <strong>pre-dsf-packages</strong> and <strong>post-dsf-packages</strong>:</p>
 <p>   <img src="images/dsf-pre-post-packages.png" alt=""></p>
 </li>
-<li><p>In case you only have one set of DSF package to be installed into a Temenos Continuous Deployment Extend environment, please include the package in** pre-dsf-packages** folder in the GIT</p>
+<li><p>In case you only have one set of DSF package to be installed into a Temenos Continuous Deployment Extend environment, please include the package in** pre-dsf-packages** folder in the GIT.</p>
 </li>
 <li><p>We currently support a single file inside the pre-dsf / post-dsf folders. Bundle all your DSF Packages into a .zip file before uploading them. </p>
 </li>
